--- a/components/route/style.module.css
+++ b/components/route/style.module.css
@@ -7,6 +7,9 @@
 }
 
 .route > span {
+  display: block;
+  width: 100%;
+  text-align: center;
   padding-right: var(--margin-02);
   padding-left: var(--margin-02);
 }
